mobile overflow fix

--- a/src/styles/components/core/section.scss
+++ b/src/styles/components/core/section.scss
@@ -1,5 +1,5 @@
 .c-section {
-  @apply my-12 relative ;
+  @apply my-12 relative overflow-hidden ;
 
   @screen md {
     @apply my-24;
